# MICrONS-datacleaner

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: docs.yml  static.yml
docs/: docs_main.md  index.html  search.js
docs-src/: docs_main.md
docs-src/template/: content.css  module.html.jinja2  theme.css
docs/html/: microns_datacleaner.html
docs/html/microns_datacleaner/: filters.html
docs/microns_datacleaner/: remapper.html
docs/template/: content.css
source/: downloader.py  mic_datacleaner.py  processing.py
source/MicronsDataCleaner/: processing.py
src/microns_datacleaner/: __init__.py  downloader.py  filters.py  functionalreader.py  mic_datacleaner.py  processing.py
src/microns_datacleaner/config/: celltypes.yaml  microns_versions.yaml
src/microns_datacleaner/filters/: __init__.py  filters.py
src/microns_datacleaner/remapper/: __init__.py  remapper.py
tutorial/: basic-tutorial.ipynb  tutorial.ipynb
