[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "Microns-DataCleaner"
version = "0.1.1"
description = "Provides common functions to download and process data from the mm3 data."
keywords = ["neuroscience"]
classifiers = ["Development Status :: 2 - Pre-Alpha",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
packages = [{include = ""}]
dynamic = ["version", "readme"]
authors = [{name = "Victor Buendia", email = "victor.buendia@unibocconi.it"}, {name = "Margherita Premi"}]
maintainers = [{name = "All contributors"}]
readme = "README.md"
