[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "Microns-DataCleaner"
version = "0.1.2"
description = "Provides common functions to download and process data from the mm3 data."
keywords = ["neuroscience"]
classifiers = ["Development Status :: 2 - Pre-Alpha",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
packages = [{include = ""}]
dynamic = ["version", "readme"]
authors = [{name = "Victor Buendia", email = "victor.buendia@unibocconi.it"}, {name = "Margherita Premi", email = "margherita.premi@gmail.com"}]
maintainers = [{name = "All contributors"}]
readme = "README.md"

dependencies = [
    "numpy (>=1.26.0)",
    "standard_transform (>=1.4.0)",
    "pandas (>= 2.2.3)",
    "caveclient (>=7.6.2)",
    "tqdm (>=4.66.5)", 
    "scipy (>=1.14.1)"
]